[package]
name = "mz-adapter"
description = "Materialize's adapter layer."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrow = { version = "57", default-features = false }
async-stream = "0.3.6"
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
bytesize.workspace = true
chrono.workspace = true
dec = "0.4.8"
derivative.workspace = true
differential-dataflow.workspace = true
enum-kinds.workspace = true
fail.workspace = true
futures.workspace = true
governor = "0.10.1"
hex.workspace = true
imbl = { version = "7.0.0", features = ["serde"] }
http.workspace = true
hyper-tls = "0.5.0"
ipnet = "2.12.0"
itertools.workspace = true
launchdarkly-server-sdk = { version = "2.6.2", default-features = false }
maplit.workspace = true
mz-adapter-types = { path = "../adapter-types" }
mz-audit-log = { path = "../audit-log" }
mz-auth = { path = "../auth" }
mz-build-info = { path = "../build-info" }
mz-catalog = { path = "../catalog" }
mz-cloud-provider = { path = "../cloud-provider", default-features = false }
mz-cloud-resources = { path = "../cloud-resources" }
mz-cluster-client = { path = "../cluster-client" }
mz-compute-client = { path = "../compute-client" }
mz-compute-types = { path = "../compute-types" }
mz-controller = { path = "../controller" }
mz-controller-types = { path = "../controller-types" }
mz-dyncfg = { path = "../dyncfg" }
mz-expr = { path = "../expr" }
mz-license-keys = { path = "../license-keys" }
mz-kafka-util = { path = "../kafka-util" }
mz-metrics = { path = "../metrics" }
mz-mysql-util = { path = "../mysql-util" }
mz-orchestrator = { path = "../orchestrator" }
mz-ore = { path = "../ore", features = ["chrono", "async", "panic", "process", "tracing", "id_gen"] }
mz-persist-types = { path = "../persist-types" }
mz-persist-client = { path = "../persist-client" }
mz-pgcopy = { path = "../pgcopy" }
mz-pgrepr = { path = "../pgrepr" }
mz-pgwire-common = { path = "../pgwire-common" }
mz-postgres-util = { path = "../postgres-util" }
mz-proto = { path = "../proto" }
mz-repr = { path = "../repr", features = ["tracing"] }
mz-rocksdb-types = { path = "../rocksdb-types" }
mz-secrets = { path = "../secrets" }
mz-segment = { path = "../segment" }
mz-service = { path = "../service" }
mz-sql = { path = "../sql" }
mz-sql-parser = { path = "../sql-parser" }
mz-sql-server-util = { path = "../sql-server-util"}
mz-ssh-util = { path = "../ssh-util" }
mz-storage-client = { path = "../storage-client" }
mz-storage-types = { path = "../storage-types" }
mz-tracing = { path = "../tracing" }
mz-transform = { path = "../transform" }
mz-timestamp-oracle = { path = "../timestamp-oracle", default-features = false }
openssl.workspace = true
opentelemetry = { version = "0.31.0", features = ["trace"] }
prometheus.workspace = true
prost.workspace = true
qcell = "0.5"
rand.workspace = true
rand_chacha = "0.9.0"
semver = "1.0.27"
serde.workspace = true
serde_json.workspace = true
serde_plain = "1.0.2"
sha2 = "0.10.9"
smallvec = { version = "1.15.1", features = ["union"] }
static_assertions.workspace = true
timely.workspace = true
tokio = { version = "1.49.0", features = ["rt", "time"] }
tokio-postgres = { version = "0.7.15" }
tokio-stream = "0.1.18"
tracing.workspace = true
tracing-core = "0.1.35"
tracing-opentelemetry = { version = "0.32.1" }
tracing-subscriber = "0.3.23"
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
datadriven = "0.9.0"
mz-persist = { path = "../persist", features = ["turmoil"] }
mz-persist-client = { path = "../persist-client", features = ["turmoil"] }
turmoil = "0.7.1"

[[bench]]
name = "catalog"
harness = false

[features]
default = []
foundationdb = ["mz-timestamp-oracle/foundationdb"]
