[package]
name = "mz-adapter"
description = "Materialize's adapter layer."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
bytesize.workspace = true
chrono.workspace = true
dec.workspace = true
derivative.workspace = true
differential-dataflow.workspace = true
enum-kinds.workspace = true
fail.workspace = true
futures.workspace = true
governor.workspace = true
hex.workspace = true
imbl.workspace = true
http.workspace = true
ipnet.workspace = true
itertools.workspace = true
launchdarkly-server-sdk.workspace = true
launchdarkly-sdk-transport.workspace = true
maplit.workspace = true
mz-adapter-types = { path = "../adapter-types" }
mz-audit-log = { path = "../audit-log" }
mz-auth = { path = "../auth" }
mz-build-info = { path = "../build-info" }
mz-catalog = { path = "../catalog" }
mz-cloud-provider = { path = "../cloud-provider", default-features = false }
mz-cloud-resources = { path = "../cloud-resources" }
mz-cluster-client = { path = "../cluster-client" }
mz-compute-client = { path = "../compute-client" }
mz-compute-types = { path = "../compute-types" }
mz-controller = { path = "../controller" }
mz-controller-types = { path = "../controller-types" }
mz-dyncfg = { path = "../dyncfg" }
mz-expr = { path = "../expr" }
mz-license-keys = { path = "../license-keys" }
mz-kafka-util = { path = "../kafka-util" }
mz-metrics = { path = "../metrics" }
mz-mysql-util = { path = "../mysql-util" }
mz-orchestrator = { path = "../orchestrator" }
mz-ore = { path = "../ore", features = ["chrono", "async", "panic", "process", "tracing", "id_gen"] }
mz-persist-types = { path = "../persist-types" }
mz-persist-client = { path = "../persist-client" }
mz-pgcopy = { path = "../pgcopy" }
mz-pgrepr = { path = "../pgrepr" }
mz-pgwire-common = { path = "../pgwire-common" }
mz-postgres-util = { path = "../postgres-util" }
mz-proto = { path = "../proto" }
mz-repr = { path = "../repr", features = ["tracing"] }
mz-rocksdb-types = { path = "../rocksdb-types" }
mz-secrets = { path = "../secrets" }
mz-segment = { path = "../segment" }
mz-service = { path = "../service" }
mz-sql = { path = "../sql" }
mz-sql-parser = { path = "../sql-parser" }
mz-sql-server-util = { path = "../sql-server-util"}
mz-ssh-util = { path = "../ssh-util" }
mz-storage-client = { path = "../storage-client" }
mz-storage-types = { path = "../storage-types" }
mz-tracing = { path = "../tracing" }
mz-transform = { path = "../transform" }
mz-timestamp-oracle = { path = "../timestamp-oracle", default-features = false }
openssl.workspace = true
opentelemetry.workspace = true
prometheus.workspace = true
prost.workspace = true
qcell.workspace = true
rand.workspace = true
rand_chacha.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
sha2.workspace = true
smallvec = { workspace = true, features = ["union"] }
static_assertions.workspace = true
timely.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
datadriven.workspace = true
mz-persist = { path = "../persist", features = ["turmoil"] }
mz-persist-client = { path = "../persist-client", features = ["turmoil"] }
turmoil.workspace = true

[[bench]]
name = "catalog"
harness = false

[features]
default = []
foundationdb = ["mz-timestamp-oracle/foundationdb"]
