[package]
name = "mz-alloc-default"
description = "Activates the best default global memory allocator for the platform."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mz-alloc = { path = "../alloc", default-features = false }
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[features]
default = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack", "mz-alloc"]
