[package]
name = "mz-arrow-util"
description = "Arrow / Parquet utility library."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
arrow = { version = "55.2.0", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
dec = { version = "0.4.9", features = ["num-traits"] }
half = "2"
itertools = "0.14.0"
mz-repr = { path = "../repr" }
mz-ore = { path = "../ore" }
num-traits = "0.2"
ordered-float = { version = "5.1.0" }
serde = { version = "1.0.219" }
serde_json = "1.0.145"
uuid = "1.19.0"
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[features]
default = ["workspace-hack"]
