[package]
name = "mz-arrow-util"
description = "Arrow / Parquet utility library."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrow = { version = "57", default-features = false }
chrono.workspace = true
dec = { version = "0.4.9", features = ["num-traits"] }
half = "2"
itertools.workspace = true
mz-repr = { path = "../repr" }
mz-ore = { path = "../ore" }
num-traits = "0.2"
ordered-float = { version = "5.1.0" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
