[package]
name = "mz-arrow-util"
description = "Arrow / Parquet utility library."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
dec = { workspace = true, features = ["num-traits"] }
half = "2"
itertools.workspace = true
mz-repr = { path = "../repr" }
mz-ore = { path = "../ore" }
num-traits = "0.2"
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
