[package]
name = "mz-audit-log"
description = "Audit log data structures."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mz-ore = { path = "../ore", features = ["test"] }
proptest = { version = "1.10.0", default-features = false, features = ["std"] }
proptest-derive = { version = "0.8.0", features = ["boxed_union"] }
serde.workspace = true
serde_json = "1.0.149"
serde_plain = "1.0.2"

[features]
default = []
