[package]
name = "mz-audit-log"
description = "Audit log data structures."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mz-ore = { path = "../ore", features = ["test"] }
proptest.workspace = true
proptest-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true

[features]
default = []
