[package]
name = "mz-auth"
description = "Shared authentication logic."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
mz-ore = { path = "../ore", features = ["test"] }
serde.workspace = true
proptest-derive.workspace = true
proptest.workspace = true
static_assertions.workspace = true
aws-lc-rs.workspace = true
itertools.workspace = true

[features]
default = []
