[package]
name = "mz-authenticator"
version = "0.1.0"
authors = ["Materialize, Inc."]
license = "proprietary"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
jsonwebtoken = "10.3.0"
mz-adapter = { path = "../adapter", default-features = false }
mz-adapter-types = { path = "../adapter-types", default-features = false }
mz-auth = { path = "../auth", default-features = false }
mz-frontegg-auth = { path = "../frontegg-auth", default-features = false }
mz-ore = { path = "../ore", features = ["assert"] }
mz-pgwire-common = { path = "../pgwire-common", default-features = false }
reqwest = "0.12.24"
tokio-postgres = { version = "0.7.15" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.43"
url = "2.5.7"

[dev-dependencies]
mz-ore = { path = "../ore", default-features = false, features = ["test"] }
serde_json = "1.0"

[lints]
workspace = true

[features]
default = []

[package.metadata.cargo-udeps.ignore]
