[package]
name = "mz-authenticator"
version = "0.1.0"
authors = ["Materialize, Inc."]
license = "proprietary"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
jsonwebtoken.workspace = true
mz-adapter = { path = "../adapter", default-features = false }
mz-adapter-types = { path = "../adapter-types", default-features = false }
mz-auth = { path = "../auth", default-features = false }
mz-frontegg-auth = { path = "../frontegg-auth", default-features = false }
mz-ore = { path = "../ore", features = ["assert"] }
mz-pgwire-common = { path = "../pgwire-common", default-features = false }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots-no-provider"], default-features = false }
tokio-postgres.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mz-ore = { path = "../ore", default-features = false, features = ["test"] }
serde_json.workspace = true

[lints]
workspace = true

[features]
default = []

[package.metadata.cargo-udeps.ignore]
