[package]
name = "mz-avro-derive"
version = "0.0.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["full"] }
