[package]
name = "mz-avro-derive"
version = "0.0.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
license = "Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }
