[package]
name = "mz-avro-derive"
version = "0.0.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
license = "Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
