[package]
name = "mz-avro"
description = "Library for working with Apache Avro in Rust"
version = "0.7.0"
authors = [
    "Brennan Vincent <brennan@materialize.com>",
]
license = "Apache-2.0"
repository = "https://github.com/MaterializeInc/materialize"
edition.workspace = true
rust-version.workspace = true
autobenches = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
byteorder = { version = "1.4.3", optional = true }
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
crc32fast = { version = "1.3.2", optional = true }
digest = "0.10.7"
enum-kinds = "0.5.1"
flate2 = "1.1.5"
itertools = "0.14.0"
mz-ore = { path = "../ore", features = ["test"] }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
snap = { version = "1.1.1", optional = true }
tracing = "0.1.43"
uuid = "1.19.0"
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[features]
default = ["workspace-hack"]
snappy = ["byteorder", "crc32fast", "snap"]

[package.metadata.cargo-udeps.ignore]
normal = ["mz-ore", "workspace-hack"]
