[package]
name = "mz-avro"
description = "Library for working with Apache Avro in Rust"
version = "0.7.0"
authors = [
    "Brennan Vincent <brennan@materialize.com>",
]
license = "Apache-2.0"
repository = "https://github.com/MaterializeInc/materialize"
edition.workspace = true
rust-version.workspace = true
autobenches = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
byteorder = { workspace = true, optional = true }
chrono.workspace = true
crc32fast = { version = "1.3.2", optional = true }
digest = "0.10.7"
enum-kinds.workspace = true
flate2.workspace = true
itertools.workspace = true
mz-ore = { path = "../ore", features = ["test"] }
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snap = { version = "1.1.1", optional = true }
tracing.workspace = true
uuid.workspace = true

[features]
default = []
snappy = ["byteorder", "crc32fast", "snap"]

[package.metadata.cargo-udeps.ignore]
