[package]
name = "mz-aws-s3-util"
description = "AWS S3 utilities."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aws-sdk-s3 = { version = "0.26", default-features = false, features = ["native-tls", "rt-tokio"] }
aws-types = "0.55"
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[features]
default = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
