[package]
name = "mz-aws-secrets-controller"
version = "0.1.0"
authors = ["Materialize, Inc."]
license = "proprietary"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = { version = "1.8.10", default-features = false }
aws-credential-types = { version = "1.2.8", features = ["hardcoded-credentials"] }
aws-sdk-secretsmanager = { version = "1.93.0", default-features = false, features = ["rt-tokio"] }
aws-types = "1.3.9"
futures = { version = "0.3.31" }
mz-aws-util = { path = "../aws-util", default-features = false }
mz-secrets = { path = "../secrets", default-features = false }
mz-repr = { path = "../repr", default-features = false }
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }
tracing = "0.1.43"
uuid = "1.19.0"

[features]
default = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
