[package]
name = "mz-aws-secrets-controller"
version = "0.1.0"
authors = ["Materialize, Inc."]
license = "proprietary"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-types.workspace = true
futures.workspace = true
mz-aws-util = { path = "../aws-util", default-features = false }
mz-secrets = { path = "../secrets", default-features = false }
mz-repr = { path = "../repr", default-features = false }
tracing.workspace = true
uuid.workspace = true

[features]
default = []
