[package]
name = "mz-aws-util"
description = "AWS utilities."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
aws-config = { workspace = true, features = ["default-https-client", "rt-tokio"], default-features = false }
aws-sdk-s3 = { workspace = true, features = ["rt-tokio",], optional = true, default-features = false }
aws-smithy-types = { workspace = true, features = ["byte-stream-poll-next"] }
aws-types.workspace = true
bytes.workspace = true
bytesize.workspace = true
futures.workspace = true
http.workspace = true
mz-ore = { path = "../ore", features = ["async"], default-features = false }
pin-project.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
mz-ore = { path = "../ore", default-features = false, features = ["test"] }

[features]
default = []
s3 = ["aws-sdk-s3"]
