[package]
name = "mz-aws-util"
description = "AWS utilities."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3 = { version = "1.122.0", default-features = false, features = [
    "rt-tokio",
], optional = true }
aws-smithy-runtime-api = "1.10.0"
aws-smithy-runtime = { version = "1.9.8", features = ["connector-hyper-0-14-x"] }
aws-smithy-types = { version = "1.1.8", features = ["byte-stream-poll-next"] }
aws-types.workspace = true
bytes.workspace = true
bytesize.workspace = true
futures.workspace = true
http.workspace = true
hyper-tls = "0.5.0"
mz-ore = { path = "../ore", features = ["async"], default-features = false }
pin-project.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
mz-ore = { path = "../ore", default-features = false, features = ["test"] }

[features]
default = []
s3 = ["aws-sdk-s3"]
