[package]
name = "mz-aws-util"
description = "AWS utilities."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3 = { workspace = true, optional = true }
aws-smithy-runtime-api.workspace = true
aws-smithy-runtime.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
bytes.workspace = true
bytesize.workspace = true
futures.workspace = true
http.workspace = true
hyper-tls = "0.5.0"
mz-ore = { path = "../ore", features = ["async"], default-features = false }
pin-project.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
mz-ore = { path = "../ore", default-features = false, features = ["test"] }

[features]
default = []
s3 = ["aws-sdk-s3"]
