[package]
name = "mz-balancerd"
description = "Balancer service."
version = "26.20.0-dev.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
bytesize.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
domain = { version = "0.11.1", default-features = false, features = ["resolv"] }
futures.workspace = true
humantime.workspace = true
hyper.workspace = true
hyper-openssl = "0.10.2"
hyper-util.workspace = true
jsonwebtoken.workspace = true
launchdarkly-server-sdk = { version = "2.6.2", default-features = false }
mz-alloc = { path = "../alloc" }
mz-alloc-default = { path = "../alloc-default", optional = true }
mz-build-info = { path = "../build-info" }
mz-dyncfg-launchdarkly = { path = "../dyncfg-launchdarkly" }
mz-dyncfg-file= { path = "../dyncfg-file" }
mz-dyncfg = { path = "../dyncfg" }
mz-frontegg-auth = { path = "../frontegg-auth" }
mz-http-util = { path = "../http-util" }
mz-orchestrator-tracing = { path = "../orchestrator-tracing" }
mz-ore = { path = "../ore", default-features = false, features = ["id_gen"]}
mz-server-core = { path = "../server-core" }
mz-tracing = { path = "../tracing" }
mz-pgwire-common = { path = "../pgwire-common" }
num_cpus.workspace = true
openssl.workspace = true
prometheus.workspace = true
proxy-header = "0.1.2"
semver.workspace = true
tokio.workspace = true
tokio-openssl = "0.6.5"
tokio-postgres.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-metrics.workspace = true
tower = "0.5.3"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
mz-environmentd = { path = "../environmentd", default-features = false, features = ["test"] }
mz-frontegg-mock = { path = "../frontegg-mock" }
postgres.workspace = true
reqwest.workspace = true
tempfile.workspace = true

[features]
default = ["mz-alloc-default"]
jemalloc = ["mz-alloc/jemalloc"]

[package.metadata.cargo-udeps.ignore]
normal = ["mz-alloc-default"]
