[package]
name = "mz-billing-demo"
description = "Microservice demo using Materialize to power a real-time billing usecase"
version = "0.0.0"
edition = "2021"
rust-version = "1.62.0"
publish = false

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.0", default-features = false, features = ["clock", "std"] }
clap = { version = "3.2.14", features = ["derive"] }
hex = "0.4.3"
mz-ore = { path = "../../src/ore", features = ["task"] }
mz-test-util = { path = "../../test/test-util" }
prost = { version = "0.10.3", features = ["no-recursion-limit"] }
prost-types = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = "1.19.2"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.10.3", features = ["vendored"] }
